@@ -807,7 +807,7 @@ the % character.
 .RE
 .TP 20
 -3, --hash <algo>
-With this option set, when creating, isolating or merging an archive, beside each generated slices an on-fly hash file of the slice is created using the specified algorithm. Available algorithm are "md5" and "sha1", by default no hash file is generated. The hash file generated is named based on the name of the slice with the .md5 or .sha1 extension added to it at the end. These hash files can be processes by md5sum and sha1sum usual commands (md5sum -c <hash file>) to verify that the slice has not been corrupted. Note that the result is different than generating the hash file using md5sum or sha1sum once the slice is created, in particular if the media is faulty: calling md5sum or sha1sum on the written slice will make you compute the hash result on a possibly already corrupted file, thus the corruption will not be seen when testing the file against the hash at a later time. Note also that the creation of a hash file is not available when producing the archive on a pipe ("dar -c -").
+With this option set, when creating, isolating or merging an archive, beside each generated slices an on-fly hash file of the slice is created using the specified algorithm. Available algorithm are "md5", "sha1" and "sha512". By default no hash file is generated. The hash file generated is named based on the name of the slice with the .md5, .sha1 or .sha512 extension added to it at the end. These hash files can be processes by md5sum, sha1sum and sha512sum usual commands (md5sum -c <hash file>) to verify that the slice has not been corrupted. Note that the result is different than generating the hash file using md5sum or sha1sum once the slice is created, in particular if the media is faulty: calling md5sum or sha1sum on the written slice will make you compute the hash result on a possibly already corrupted file, thus the corruption will not be seen when testing the file against the hash at a later time. Note also that the creation of a hash file is not available when producing the archive on a pipe ("dar -c -").
 .TP 20
 -7, --sign email[,email[,...email]]
 When creating an archive with public key encryption (read -K option) it is also possible to sign it with one or more of your private key(s). At the difference of the hash feature above, only the randomly generated key used to cipher the archive, key that is dropped at the beginning and at the end of the archive, is signed. If the archive is modified at some place, that part will not be possible to decipher, but signature verification will stay quick and valid, unless the part that has been tempered is the key inside the archive in which case signature check will report a failure and archive will not be readable at all. If the signature is valid and the archive could be extracted without error, the whole archive could be assumed to be signed by the gnupg key owners, but read below the security note.
