@@ -56,9 +56,10 @@ namespace libdar
 
     enum hash_algo
     {
-	hash_none, //< no hashing algorithm
-	hash_md5,  //< MD5 algorithm
-	hash_sha1  //< SHA1 algorithm
+	hash_none,  //< no hashing algorithm
+	hash_md5,   //< MD5 algorithm
+	hash_sha1,  //< SHA1 algorithm
+	hash_sha512 //< SHA-512 algorithm
     };
 
 
